--- a/TextViewer.cls
+++ b/TextViewer.cls
@@ -4579,7 +4579,7 @@ End Select
 
 End Function
 Private Function aheadstatus(a$, Optional srink As Boolean = True, Optional pos As Long = 1) As String 'ok
-Dim b$, part$, w$, Level&, pos2 As Long, word$
+Dim b$, part$, w$, pos2 As Long, word$
 
 If a$ = vbNullString Then Exit Function
 If pos = 0 Then pos = 1
@@ -4620,7 +4620,6 @@ Do While pos <= Len(a$)
         pos = pos + 1
         Loop
     ElseIf w$ = "(" Then
-        Level& = 0
         If part$ <> "" Then
             ' after
             ElseIf Right$(b$, 1) = "a" Then
